# mappy-rs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE.MD  README.md  help.py  pyproject.toml
.env/: pyvenv.cfg
.github/: CONTRIBUTING.md
.github/workflows/: CI.yml  check.yml  publish.yml
img/: Untitled-2023-01-04-1238.excalidraw
resources/test/: test.fa  test.mmi
src/: lib.rs
tests/: benchmark.py  mappy_rs.yml  memory_test.py  python_test.py  test_alignment.py
