[package]
name = "mappy-rs"
version = "0.1.0"
edition = "2021"
authors = ["Rory Munro <roryjmunro1@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Python Bindings to multithreaded rust minimap2"
repository = "https://github.com/alexomics/mm2_rs"
categories = ["science"]
keywords = ["bioinformatics", "fasta", "alignment", "fastq"]
exclude = [
	"**/*.fasta",
	"libsfasta/test_data/",
	"*.profdata",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mappy_rs"

[dependencies]
libc = "0.2.134"
bytelines = "2.4.0"
simdutf8 = "0.1.4"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
pyo3 = { version = "0.17.3", features = ["extension-module"] }
threadpool = "1.0"
minimap2-sys = { git = "https://github.com/adoni5/minimap2-sys" }
crossbeam = "0.8.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units  = 1

[profile.dev]
debug = true

[profile.dev.package."*"]
opt-level = 3