[build-system]
requires = ["maturin>=0.14"]
build-backend = "maturin"

[project]
name = "mappy-rs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.0.0a"
license = {text = "BSD 3-Clause License"}
description = "A multithreaded python wrapper for rust bindings of minimap2."
authors = [
    { name = "Rory Munro",  email = "rory.munro@nottingham.ac.uk"},
    { name = "Aelxander Payne", email = "alexander.payne@nottingham.ac.uk" }
]

maintainers = [
    { name = "Rory Munro",  email = "rory.munro@nottingham.ac.uk"},
]
homepage = "https://github.com/adoni5/mappy-rs"
keywords = ["alignment", "bioinformatics", "python", "rust", "minimap2"]
